--- a/Dockerfiles/ImageBuild/Dockerfile
+++ b/Dockerfiles/ImageBuild/Dockerfile
@@ -2,7 +2,7 @@ FROM --platform=${BUILDPLATFORM} golang:1.24.6-alpine3.22 AS builder
 
 ARG TARGETARCH
 
-RUN apk add git 
+# RUN apk add git 
 #&& go install mvdan.cc/garble@latest
 
 WORKDIR /app
