add https server functionality - befor auth functionality implementation

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -16,11 +16,15 @@ before:
     - go generate ./...
 
 builds:
-  - env:
+  - binary: lcg
+    env:
       - CGO_ENABLED=0
+    goarch:
+      - amd64
+      - arm64
+      - arm
     goos:
       - linux
-      - windows
       - darwin
 
 archives:
