Исправления в ветке main

--- a/deploy/3.deployment.tmpl.yaml
+++ b/deploy/3.deployment.tmpl.yaml
@@ -28,7 +28,7 @@ spec:
         - configMapRef:
             name: lcg-config
         - secretRef:
-            name: lcg-secret
+            name: lcg-secrets
         env:
         # Pod information
         - name: POD_NAME
