--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: lcg
   labels:
     app: lcg
-    version: v2.0.3
+    version: v2.0.4
 spec:
   replicas: 1
   selector:
@@ -15,11 +15,11 @@ spec:
     metadata:
       labels:
         app: lcg
-        version: v2.0.3
+        version: v2.0.4
     spec:
       containers:
       - name: lcg
-        image: kuznetcovay/lcg:v2.0.3
+        image: kuznetcovay/lcg:v2.0.4
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
@@ -59,20 +59,20 @@ spec:
         # Health checks
         startupProbe:
           httpGet:
-            path: /login
+            path: /lcg
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 5
           failureThreshold: 30
         readinessProbe:
           httpGet:
-            path: /login
+            path: /lcg
             port: 8080
           initialDelaySeconds: 5
           periodSeconds: 10
         livenessProbe:
           httpGet:
-            path: /login
+            path: /lcg
             port: 8080
           initialDelaySeconds: 10
           periodSeconds: 60
