--- a/deploy/kustomization.tmpl.yaml
+++ b/deploy/kustomization.tmpl.yaml
@@ -13,13 +13,13 @@ resources:
   - ingress-route.yaml  
 
 # Common labels
-commonLabels:
-  app: lcg
-  version: ${VERSION}
-  managed-by: kustomize
+# commonLabels:
+#   app: lcg
+#   version: ${VERSION}
+#   managed-by: kustomize
 
 # Images
-images:
-  - name: lcg
-    newName: ${REPOSITORY}
-    newTag: ${VERSION}
+# images:
+#   - name: lcg
+#     newName: ${REPOSITORY}
+#     newTag: ${VERSION}
