--- a/kustomize/deployment.yaml
+++ b/kustomize/deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: lcg
   labels:
     app: lcg
-    version: v2.0.14
+    version: v.2.0.16
 spec:
   replicas: 1
   selector:
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: lcg
-        image: kuznetcovay/lcg:v2.0.14
+        image: kuznetcovay/lcg:v.2.0.16
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
