--- a/Dockerfiles/OllamaServer/Dockerfile
+++ b/Dockerfiles/OllamaServer/Dockerfile
@@ -70,6 +70,8 @@ ENV LCG_PROMPT_FOLDER=/app/data/prompts
 ENV LCG_CONFIG_FOLDER=/app/data/config
 ENV LCG_SERVER_HOST=0.0.0.0
 ENV LCG_SERVER_PORT=8080
+ENV LCG_DOMAIN="remote.ollama-server.ru"
+ENV LCG_COOKIE_PATH="/lcg"
 # ENV LCG_SERVER_ALLOW_HTTP=true
 # ENV OLLAMA_HOST=127.0.0.1
 # ENV OLLAMA_PORT=11434
